# NXKit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  libromfs-generator  main.cpp  vcpkg.json
Demo/: CMakeLists.txt  build_libromfs_generator.sh  vcpkg.json
Demo/app/: AppDelegate.cpp
Demo/app/Screens/IBTestController/: IBTestController.cpp
Demo/app/Screens/NXTextScreen/: NXNavigationController.cpp  NXNavigationController.h  NXTabBarController.cpp
Demo/app/Screens/TestScrollController/: TestScrollController.cpp  TestScrollController.hpp
Demo/app/Screens/TestViewController/: TestViewController.cpp  TestViewController.hpp
Demo/app/Screens/YogaTestViewController/: YogaTestViewController.cpp  YogaTestViewController.hpp
Demo/resources/Layout/: TestScreen.xml
NXKit/: CMakeLists.txt  UIAppDelegate.cpp  main.cpp  main2.cpp
NXKit.xcodeproj/: project.pbxproj
NXKit.xcodeproj/xcshareddata/xcschemes/: NXKit-iOS.xcscheme  NXKit.xcscheme
NXKit/TestControllers/AnimationTestViewController/: AnimationTestViewController.cpp  AnimationTestViewController.hpp
NXKit/TestControllers/ControlTestViewController/: ControlTestViewController.cpp  ControlTestViewController.hpp
NXKit/TestControllers/ListViewController/: ListViewController.cpp  ListViewController.hpp
NXKit/TestControllers/TableView2TestController/: TableView2TestController.cpp  TableView2TestController.hpp
NXKit/TestControllers/TableViewTestController/: TableViewTestController.cpp  TableViewTestController.hpp
NXKit/TestControllers/TextTestController/: TextTestController.cpp  TextTestController.hpp
NXKit/TestControllers/TouchTestViewController/: TouchTestViewController.cpp  TouchTestViewController.hpp
NXKit/TestControllers/ViewController/: ViewController.cpp  ViewController.hpp
NXKit/include/: NXControl.h  NXKit.h  NXNavigationController.h  NXSeparatorView.h  NXTabBarController.h
NXKit/lib/: NXControl.cpp  NXKit.hpp  NXSeparatorView.cpp
NXKit/test/: main._cpp1.cpp
Submodules/: BuildSkia.sh  CMakeLists.txt
Submodules/UIKit/: CMakeLists.txt
Submodules/UIKit/include/: Application.h  CABlurLayer.h  CALayer.h  CAMediaTimingFunction.h  CASpringAnimation.h  CATextLayer.h  CGImage.h  ContentsGravityTransformation.h  DispatchQueue.h  Geometry.h  NXAffineTransform.h  NXColor.h  NXData.h  NXLayer.h  NXSize.h  SkiaCtx.h  Timer.h  UIAction.h  UIApplication.h  UIApplicationDelegate.h  UIApplicationMain.h  UIBlurView.h  UIButton.h  UIColor.h  UIControl.h  UIControlGestureRecognizer.h  UIEdgeInsets.h  UIEvent.h  UIFocus.h  UIFocusSystem.h  UIGestureRecognizer.h  UIImage.h  UIImageView.h  UIKey.h  UIKeyboardHIDUsage.h  UIKit.h  UILabel.h  UINib.h  UIPanGestureRecognizer.h  UIPress.h  (+9 more)
Submodules/UIKit/include/UIScrollViewExtensions/: SpringTimingParameters.h  UIScrollViewDecelerationRate.h
Submodules/UIKit/include/tools/: IBTools.h  Logger.hpp  OptionSet.hpp  SharedBase.hpp  Tools.hpp
Submodules/UIKit/lib/: Application.cpp  Application.h  Application1.cpp  Application1.h  CABasicAnimation.cpp  CABasicAnimationPrototype.cpp  CABlurLayer.cpp  CADisplayLink.cpp  CALayer.cpp  CAMediaTimingFunction.cpp  CASpringAnimation.cpp  CASpringAnimationPrototype.cpp  CATextLayer.cpp  CATransaction.cpp  CGImage.cpp  DispatchQueue.cpp  Geometry.cpp  NXAffineTransform.cpp  NXColor.cpp  NXData.cpp  NXLayer.cpp  NXSize.cpp  NXTransform3D.cpp  Timer.cpp  UIAction.cpp  UIApplication.cpp  UIApplicationDelegateImpl.cpp  UIApplicationMain.cpp  UIBlurView.cpp  UIButton.cpp  UIColor.cpp  UIControl.cpp  UIControlGestureRecognizer.cpp  UIEvent.cpp  UIFocusAnimationCoordinator.cpp  UIFocusSystem.cpp  UIGestureRecognizer.cpp  UIImage.cpp  UIImageView.cpp  UIKey.cpp  (+14 more)
Submodules/UIKit/lib/SkTools/: EventTracingPriv.cpp  SkDebugfTracer.cpp
Submodules/UIKit/lib/UIScrollViewExtensions/: DecelerationTimingParameters.cpp  RubberBand.cpp
Submodules/UIKit/lib/tools/: IBTools.cpp  Tools.cpp
Submodules/angle/mac/: libEGL.dylib
Submodules/angle/mac/MetalANGLE.framework/Versions/A/Resources/: Info.plist
Submodules/angle/tvos/MetalANGLE.framework/: Info.plist
Submodules/cmake/: toolchain.cmake
Submodules/fmt/: .gitrepo
Submodules/glad/include/glad/: glad.h
Submodules/glad/src/: glad.c
Submodules/thorvg_config/: config.h
UIKitCore/: CMakeLists.txt
UIKitCore/include/: Application.h  CABasicAnimation.h  CABasicAnimationPrototype.h  CABlurLayer.h  CADisplayLink.h  CALayer.h  CAMediaTimingFunction.h  CASpringAnimationPrototype.h  CATextLayer.h  CATransaction.h  DispatchQueue.h  IndexPath.h  NXTransform3D.h  SkiaCtx.h  UIAction.h  UIApplication.h  UIApplicationDelegate.h  UIApplicationMain.h  UIBlurView.h  UIButton.h  UIColor.h  UIControl.h  UIEvent.h  UIFocusAnimationCoordinator.h  UIGestureRecognizer.h  UIImage.h  UIImageView.h  UIKey.h  UIKit.h  UILabel.h  UINib.h  UIPanGestureRecognizer.h  UIPress.h  UIResponder.h  UIScrollView.h  UITraitCollection.h  UITraitEnvironment.h  UIView.h  UIViewAnimationOptions.h  UIViewContentMode.h  (+3 more)
UIKitCore/include/SkTools/: SkDebugfTracer.h
UIKitCore/include/UIScrollViewExtensions/: DecelerationTimingParameters.h  RubberBand.h  TimerAnimation.h
UIKitCore/include/tools/: Fatal.h
UIKitCore/lib/: Application.cpp  CABlurLayer.cpp  CALayer.cpp  CASpringAnimation.cpp  CATextLayer.cpp  CGImage.cpp  ContentsGravityTransformation.cpp  Geometry.cpp  IndexPath.cpp  NXAffineTransform.cpp  NXData.cpp  Timer.cpp  UIApplication.cpp  UIApplicationMain.cpp  UIColor.cpp  UIControl.cpp  UIEdgeInsets.cpp  UIFocus.cpp  UIFocusSystem.cpp  UIGestureRecognizer.cpp  UIImage.cpp  UIImageView.cpp  UILabel.cpp  UINib.cpp  UIPanGestureRecognizer.cpp  UIPress.cpp  UIResponder.cpp  UIScrollView.cpp  UITraitCollection.cpp  UIView.cpp  UIViewAnimationGroup.cpp  UIWindow.cpp  YGLayout.cpp
UIKitCore/lib/UIScrollViewExtensions/: DecelerationTimingParameters.cpp  SpringTimingParameters.cpp  TimerAnimation.cpp
UIKitCore/lib/tools/: Fatal.cpp  Logger.cpp
app/: AppDelegate.cpp  main.cpp
app/Screens/IBTestController/: IBTestController.cpp  IBTestController.h
resources/Layout/: TestScreen.xml
(+129 files in other folders)
